bdr.BDR2.scala.error
Erreur de compilation :
BDR2:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var lettre : String
      ^BDR2:2: error: local variables must be initialized
  var lettre : String
      ^BDR2:3: error: value update is not a member of String
  litMessage()= lettre
  ^